@@ -39,10 +39,10 @@ later version published by the Free Software Foundation.")
 (define *modules*
   '(((gnome gobject gtype)
      "The base of the GObject type system")
-    ((gnome gobject gparameter)
-     "Parameters with constraints and default values")
     ((gnome gobject gvalue)
      "Generic boxed values")
+    ((gnome gobject gparameter)
+     "Parameters with constraints and default values")
     ((gnome gobject gclosure)
      "Language-portable closures")
     ((gnome gobject gsignal)
